Eevee Next: sphere probe uses only the custom parallax #120782

Closed
opened 2024-04-18 14:00:28 +02:00 by Dvorakir · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-18 01:19, hash: 9cb3a17352bd
Worked: Eevee

Short description of error
Eevee Next always uses the parallax type in the custom parallax panel regardless if custom parallax is enabled or not

Exact steps for others to reproduce the error
From the attached file:

  1. change probe types, observe that the parallax does not change, only the fade
  2. change the grayed out custom parallax type
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-18 01:19, hash: `9cb3a17352bd` Worked: Eevee **Short description of error** Eevee Next always uses the parallax type in the custom parallax panel regardless if custom parallax is enabled or not <video src="/attachments/b03f2ab9-8058-4cd4-ab2b-cf1d9debeb8b" title="blender_6ZviQJtaXV.mp4" controls></video> **Exact steps for others to reproduce the error** From the attached file: 1. change probe types, observe that the parallax does not change, only the fade 2. change the grayed out custom parallax type
Dvorakir added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2024-04-18 14:00:29 +02:00

I can confirm.
In EEVEE-Next, Probe Type appears to only affect distance while Custom Parallax Type affects reflection shape, regardless Custom Parallax is enabled or not.

I can confirm. In EEVEE-Next, `Probe Type` appears to only affect distance while `Custom Parallax Type` affects reflection shape, regardless `Custom Parallax` is enabled or not.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-22 23:33:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120782
No description provided.