Fix: EEVEE-Next: Sphere probe disregard the custom parallax checkbox

Fixes #120782